--- a/bootstrap.html
+++ b/bootstrap.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      
 <!--custom css-->
 <link rel="stylesheet" href="css/style.css">
 <!--Bootstrap css-->
@@ -154,10 +155,11 @@
      </div>
    </div>
    </div>
+   </section>
   
 
    <!---About section--> 
-<section class="container-fluid first-section" style="background-color: #FFFFFF; height: 2000px"; >
+<!--<section class="container-fluid first-section" style="background-color: #FFFFFF; height: 2000px"; >
   <section class="About-Section position-relative aos-init aos-animate" data-aos="fade-up" style="top: 50px">
   <div class="about-me">
   <h3 class="fs-1 text-center position-relative" style= "color: #222222;">About Us</h3>
@@ -205,14 +207,14 @@
   
   
 <!--Swiper images-->
-  <section class="swiper-images aos-init aos-animate" data-aos="zoom-out">
+  <!--<section class="swiper-images aos-init aos-animate" data-aos="zoom-out">
 <div class="container-sm">
    <!--Slider main container-->
-<div class="swiper">
+<!--<div class="swiper">
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper" style="margin-top: 20px;">
     <!-- Slides -->
-   <div class="swiper-slide"><img src="./images/client-1.png" class="img-fluid" style="width: 100px"></div>
+   <!--<div class="swiper-slide"><img src="./images/client-1.png" class="img-fluid" style="width: 100px"></div>
     <div class="swiper-slide"><img src="./images/client-2.png" class="img-fluid" style="width: 100px"></div>
     <div class="swiper-slide"><img src="./images/client-3.png" class="img-fluid" style="width: 100px"></div>
     <div class="swiper-slide"><img src="./images/client-4.png" class="img-fluid" style="width: 100px"></div>
@@ -228,7 +230,7 @@
 </section>
 
 <!---Call to action--->
-<section class="Call-to-action">
+<!--<section class="Call-to-action">
   <div class="container-sm call-to-action col-md-12 md-6 text-center pri-text-col aos-init aos-animate" data-aos="zoom-out" style="background-color: #FFFFFF;">
 <h3 class="fs-3 fw-bolder">Call To Action</h3>
 <p class="fs-5">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -342,7 +344,7 @@ maiores. Eos accusantium minus dolores lure perferenndis tempore et consequatur<
   </section>
 
   <!---Testimonials-->
-  <section class="testimonials " style="margin-top: -10px; ">
+  <!--<section class="testimonials " style="margin-top: -10px; ">
     <div class="testimonial overflow-hidden">
       <div class="testimonial-container" style="margin-top: 70px;">
         <h3 class="fs-1 text-center" style= "color: #222222; margin-top: 50px;">Testimonials</h3>
@@ -355,8 +357,8 @@ maiores. Eos accusantium minus dolores lure perferenndis tempore et consequatur<
         <div class="container-sm testimonials-col">
   <div class="swiper-one mx-1">
     <!-- Additional required wrapper -->
-    <div class="swiper-wrapper">
-      <!-- Slides -->
+    <!--<div class="swiper-wrapper">
+     
       <div class="swiper-slide">
         <div class="card border-0 shadow mx-auto mb-4" style="width: 18rem;">
           <img src="./images/testimonials-1.jpg" class="card-img-top rounded-circle mt-4 mx-3" style="width: 100px">
@@ -488,7 +490,7 @@ maiores. Eos accusantium minus dolores lure perferenndis tempore et consequatur<
         </div>
       </div>
     <!-- If we need pagination -->
-    <div class="swiper-pagination"></div>
+    <!--<div class="swiper-pagination"></div>
 </div>
 </div>
 </div>
@@ -497,7 +499,7 @@ maiores. Eos accusantium minus dolores lure perferenndis tempore et consequatur<
 </div>
 </section>
 <!--Contact-->
-  <section class="Contact-me  aos-init aos-animate" data-aos="fade-up" style=" width: 100%; margin-top: -50px;">
+  <!--<section class="Contact-me  aos-init aos-animate" data-aos="fade-up" style=" width: 100%; margin-top: -50px;">
     <div class="Our contact" style="margin-top: 50px;">
       <h3 class="fs-2 text-center pt-5" style= "color: #222222; margin-top: 50px;">Contact</h3>
     <div class="line1 mx-auto mt-4 text-center"></div>
