--- a/bootstrap.html
+++ b/bootstrap.html
@@ -90,7 +90,7 @@
     </div>
   </nav>
 <!--Main-->
-<section style="height: 9500px" class="big-section brand-font">
+<!--<section style="height: 9500px" class="big-section brand-font">
 <main class="pri-bg-col brand-font hero1" style="height: 3000px">
 
   <div class="md-3  d-flex flex-row justify-content-end align-items-end img-container">
